--- a/src/net/WebApp/wwwroot/appsettings.json
+++ b/src/net/WebApp/wwwroot/appsettings.json
@@ -1,4 +1,4 @@
 {
     "API_ENDPOINT": "",
-    "FUNCTIONS_ENDPOINT": "http://memealyzerbicep12function.azurewebsites.net"
+    "FUNCTIONS_ENDPOINT": ""
 }
