--- a/.env
+++ b/.env
@@ -1,16 +1,20 @@
-BASENAME=memealyzerdev
+BASENAME=${BASENAME}
+REGION=westus2
+FAILOVER_REGION=eastus2
 
 # TERRAFORM VARS
 TF_VAR_basename=${BASENAME}
-TF_VAR_location=westus2
-TF_VAR_failover_location=eastus2
+TF_VAR_location=${REGION}
+TF_VAR_failover_location=${FAILOVER_REGION}
 
 # SCRIPT VARS
-AZURE_AKS_CLUSTER_NAME=${BASENAME}aks
 AZURE_FUNCTION_APP_NAME=${BASENAME}function
 AZURE_CONTAINER_REGISTRY_SERVER=${BASENAME}acr.azurecr.io
-K8S_CONTEXT=docker-desktop
-CONTAINER_TAG=1.0.9
+
+# Use the following if you want to run with local k8s cluster
+#K8S_CONTEXT=docker-desktop
+K8S_CONTEXT=${BASENAME}aks
+CONTAINER_TAG=1.0.10
 
 # APP VARS
 
@@ -18,9 +22,8 @@ CONTAINER_TAG=1.0.9
 AZURE_CLIENT_SYNC_QUEUE_NAME=sync
 
 # FOR LOCAL DEV WITH TYE BECAUSE TYE SUPPORTS LOCAL INGRESS
-FUNCTIONS_ENDPOINT=
 API_ENDPOINT=
-
+FUNCTIONS_ENDPOINT=
 # FOR LOCAL DEV WITH DOCKER
 #FUNCTIONS_ENDPOINT=http://localhost:3080
 #API_ENDPOINT=http://localhost:2080
@@ -30,7 +33,6 @@ MEME_ENDPOINT=https://meme-api.herokuapp.com/gimme/wholesomememes
 #AZURE_STORAGE_TYPE=COSMOS_SQL
 #AZURE_MESSAGING_TYPE=SERVICE_BUS_QUEUE
 #AZURE_MESSAGING_TYPE=STORAGE_QUEUE
-
 
 # COSMO EMULATOR
 #AZURE_COSMOS_ENDPOINT=https://localhost:8081/
