--- a/.github/workflows/tye-staging-deploy.yml
+++ b/.github/workflows/tye-staging-deploy.yml
@@ -15,7 +15,6 @@ env:
   BASENAME: memealyzerstaging
   ROOT: ${{ github.workspace }}
   DOTENV_FILENAME: .env.staging
-  WORKSPACE: staging
   AZURE_CONTAINER_REGISTRY_SERVER: memealyzerstagingacr.azurecr.io
   FUNCTIONS_ENDPOINT: http://memealyzerstagingfunction.azurewebsites.net
   REGISTRY_USERNAME: memealyzerstagingacr
@@ -70,7 +69,8 @@ jobs:
         pushd $GITHUB_WORKSPACE/pac/net/tye
         sh genfiles.sh
         sh $GITHUB_WORKSPACE/scripts/genappsettings.sh
-        tye deploy tye.yaml -v Debug --tags ${{ env.WORKSPACE }}
+        kubectl apply -f https://aka.ms/tye/ingress/deploy
+        tye deploy tye.yaml -v Debug --tags cloud
         popd
 
     - name: 'Login via Azure CLI'
