--- a/pac/net/tye/tye.yaml
+++ b/pac/net/tye/tye.yaml
@@ -1,5 +1,5 @@
 name: memealyzer
-registry: memealyzerdevacr.azurecr.io
+registry: memealyzerbicep20acr.azurecr.io
 services:
   - name: azurite
     image: mcr.microsoft.com/azure-storage/azurite:alpha
@@ -17,18 +17,15 @@ services:
         containerPort: 10002
         protocol: http
     tags:
-      - dev
+      - local
   - name: memealyzernetwebapp
     project: ../../../src/net/WebApp/WebApp.csproj
     bindings:
       - port: 1080
         containerPort: 80
-    env_file:
-      - .env
     tags:
-      - dev
-      - staging
-      - prod
+      - local
+      - cloud
   - name: memealyzernetapi
     project: ../../../src/net/Api/Api.csproj
     bindings:
@@ -37,27 +34,25 @@ services:
     env_file: 
       - .env
     tags:
-      - dev
-      - staging
-      - prod
+      - local
+      - cloud
   - name: memealyzernetfunction
     azureFunction: ../../../src/net/Services/Functions/
     bindings:
       - port: 3080
         protocol: http
     tags:
-      - dev
+      - local
   - name: memealyzernetqueueservice
     project: ../../../src/net/Services/QueueService/QueueService.csproj
     env_file: 
     - .env
     tags:
-      - dev
-      - staging
-      - prod
+      - local
+      - cloud
 
 ingress:
-  - name: ingressdev
+  - name: ingresslocal
     rules:
       - path: /
         service: memealyzernetwebapp
@@ -77,7 +72,7 @@ ingress:
         service: memealyzernetfunction
         preservePath: true
     tags:
-      - dev
+      - local
   - name: ingress
     rules:
       - path: /
@@ -95,5 +90,4 @@ ingress:
         service: memealyzernetapi
         preservePath: true
     tags:
-      - staging
-      - prod
+      - cloud
