Start of better azurite support

--- a/pac/net/tye/tye.template.yaml
+++ b/pac/net/tye/tye.template.yaml
@@ -3,19 +3,23 @@ registry: ${AZURE_CONTAINER_REGISTRY_SERVER}
 services:
   - name: azurite
     image: mcr.microsoft.com/azure-storage/azurite:alpha
+    args: azurite --oauth basic --cert ${AZURITE_CERT_FILE} --key ${AZURITE_CERT_KEY}
+    volumes:
+      - source: /usr/local/bin
+        target: /usr/remote/bin
     bindings:
       - name: blob
         port: 10000
         containerPort: 10000
-        protocol: http
+        protocol: https
       - name: queue
         port: 10001
         containerPort: 10001
-        protocol: http
+        protocol: https
       - name: table
         port: 10002
         containerPort: 10002
-        protocol: http
+        protocol: https
     tags:
       - local
   - name: memealyzernetwebapp
