--- a/src/net/Lib/Lib.csproj
+++ b/src/net/Lib/Lib.csproj
@@ -19,6 +19,7 @@
     <PackageReference Include="Azure.AI.TextAnalytics" Version="5.0.0" />
     <!-- Needed due to this issue: https://github.com/dotnet/roslyn/issues/47304 -->
     <PackageReference Include="Microsoft.Azure.Cosmos.Direct" Version="3.4.1.0" />
+    <PackageReference Include="Microsoft.Azure.CognitiveServices.Search.ImageSearch" Version="2.0.0" />
   </ItemGroup>
    <ItemGroup>
     <ProjectReference Include="..\Lib.Model\Lib.Model.csproj" />
