--- a/.env
+++ b/.env
@@ -29,8 +29,11 @@ FUNCTIONS_ENDPOINT=
 #API_ENDPOINT=http://localhost:2080
 
 MEME_ENDPOINT=https://meme-api.herokuapp.com/gimme/wholesomememes
+# === AZURE_STORAGE_TYPE (Default=COSMOS_SQL)
 #AZURE_STORAGE_TYPE=STORAGE_TABLE
 #AZURE_STORAGE_TYPE=COSMOS_SQL
+
+# === AZURE_MESSAGING_TYPE (Default=SERVICE_BUS_QUEUE)
 #AZURE_MESSAGING_TYPE=SERVICE_BUS_QUEUE
 #AZURE_MESSAGING_TYPE=STORAGE_QUEUE
 
