--- a/src/net/Lib/Lib.csproj
+++ b/src/net/Lib/Lib.csproj
@@ -5,18 +5,18 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Azure.Data.AppConfiguration" Version="1.0.1" />
-    <PackageReference Include="Azure.Messaging.ServiceBus" Version="7.0.0-preview.9" />
+    <PackageReference Include="Azure.Messaging.ServiceBus" Version="7.0.0" />
     <PackageReference Include="DotNetEnv" Version="1.4.0" />
     <PackageReference Include="System.Linq.Async" Version="4.1.1" />
-    <PackageReference Include="System.Net.Http.Json" Version="3.2.0" />
-    <PackageReference Include="Azure.Identity" Version="1.2.2" />
-    <PackageReference Include="Azure.Storage.Blobs" Version="12.5.1" />
-    <PackageReference Include="Azure.Storage.Queues" Version="12.4.1" />
+    <PackageReference Include="System.Net.Http.Json" Version="5.0.0" />
+    <PackageReference Include="Azure.Identity" Version="1.4.0-beta.1" />
+    <PackageReference Include="Azure.Storage.Blobs" Version="12.8.0-beta.1" />
+    <PackageReference Include="Azure.Storage.Queues" Version="12.6.0-beta.1" />
     <PackageReference Include="Azure.Cosmos" Version="4.0.0-preview3" />
-    <PackageReference Include="Azure.Data.Tables" Version="3.0.0-beta.2" />
-    <PackageReference Include="Azure.Security.KeyVault.Secrets" Version="4.1.0" />
-    <PackageReference Include="Azure.AI.FormRecognizer" Version="3.0.0" />
-    <PackageReference Include="Azure.AI.TextAnalytics" Version="5.0.0" />
+    <PackageReference Include="Azure.Data.Tables" Version="3.0.0-beta.4" />
+    <PackageReference Include="Azure.Security.KeyVault.Secrets" Version="4.2.0-beta.3" />
+    <PackageReference Include="Azure.AI.FormRecognizer" Version="3.1.0-beta.1" />
+    <PackageReference Include="Azure.AI.TextAnalytics" Version="5.1.0-beta.3" />
     <!-- Needed due to this issue: https://github.com/dotnet/roslyn/issues/47304 -->
     <PackageReference Include="Microsoft.Azure.Cosmos.Direct" Version="3.4.1.0" />
   </ItemGroup>
