--- a/src/net/Services/QueueService/QueueService.csproj
+++ b/src/net/Services/QueueService/QueueService.csproj
@@ -6,13 +6,14 @@
     <Version>$(CONTAINER_TAG)</Version>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Azure.AI.FormRecognizer" Version="3.0.0" />
-    <PackageReference Include="Azure.AI.TextAnalytics" Version="5.0.0" />
-    <PackageReference Include="Azure.Identity" Version="1.2.2" />
-    <PackageReference Include="Azure.Storage.Blobs" Version="12.5.1" />
-    <PackageReference Include="Azure.Storage.Queues" Version="12.4.1" />
+    <PackageReference Include="Azure.AI.FormRecognizer" Version="3.1.0-beta.1" />
+    <PackageReference Include="Azure.AI.TextAnalytics" Version="5.1.0-beta.3" />
+    <PackageReference Include="Azure.Identity" Version="1.4.0-beta.1" />
+    <PackageReference Include="Azure.Storage.Blobs" Version="12.8.0-beta.1" />
+    <PackageReference Include="Azure.Storage.Queues" Version="12.6.0-beta.1" />
     <PackageReference Include="DotNetEnv" Version="1.4.0" />
-    <PackageReference Include="System.Net.Http.Json" Version="3.2.0" />
+    <PackageReference Include="Microsoft.Bcl.AsyncInterfaces" Version="5.0.0" />
+    <PackageReference Include="System.Net.Http.Json" Version="5.0.0" />
   </ItemGroup>
 
   <ItemGroup>
