--- a/.github/workflows/tye-staging-deploy.yml
+++ b/.github/workflows/tye-staging-deploy.yml
@@ -12,6 +12,7 @@ env:
   REGISTRY_PASSWORD: ${{ secrets.REGISTRY_PASSWORD_STAGING }}
   AZURE_CREDENTIALS: ${{ secrets.AZURE_CREDENTIALS }}
   DOTENV_FILENAME: .env
+  ENV: cloud
   BASENAME: memealyzerstaging
   ROOT: ${{ github.workspace }}
   AZURE_CONTAINER_REGISTRY_SERVER: memealyzerstagingacr.azurecr.io
