--- a/pac/net/tye/memealyzer-generate-production.yaml
+++ b/pac/net/tye/memealyzer-generate-production.yaml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
       - name: memealyzernetwebapp
-        image: memealyzerbicep11acr.azurecr.io/memealyzernetwebapp:1.0.10
+        image: memealyzerdev7acr.azurecr.io/memealyzernetwebapp:1.0.11
         imagePullPolicy: Always
         env:
         - name: DOTNET_LOGGING__CONSOLE__DISABLECOLORS
@@ -81,29 +81,29 @@ spec:
     spec:
       containers:
       - name: memealyzernetapi
-        image: memealyzerbicep11acr.azurecr.io/memealyzernetapi:1.0.10
+        image: memealyzerdev7acr.azurecr.io/memealyzernetapi:1.0.11
         imagePullPolicy: Always
         env:
         - name: BASENAME
-          value: 'memealyzerbicep11'
+          value: 'memealyzerdev7'
         - name: REGION
           value: 'westus2'
         - name: FAILOVER_REGION
           value: 'eastus2'
         - name: TF_VAR_basename
-          value: 'memealyzerbicep11'
+          value: 'memealyzerdev7'
         - name: TF_VAR_location
           value: 'westus2'
         - name: TF_VAR_failover_location
           value: 'eastus2'
         - name: AZURE_FUNCTION_APP_NAME
-          value: 'memealyzerbicep11function'
+          value: 'memealyzerdev7function'
         - name: AZURE_CONTAINER_REGISTRY_SERVER
-          value: 'memealyzerbicep11acr.azurecr.io'
+          value: 'memealyzerdev7acr.azurecr.io'
         - name: K8S_CONTEXT
-          value: 'memealyzerbicep11aks'
+          value: 'memealyzerdev7aks'
         - name: CONTAINER_TAG
-          value: '1.0.10'
+          value: '1.0.11'
         - name: AZURE_CLIENT_SYNC_QUEUE_NAME
           value: 'sync'
         - name: API_ENDPOINT
@@ -172,29 +172,29 @@ spec:
     spec:
       containers:
       - name: memealyzernetqueueservice
-        image: memealyzerbicep11acr.azurecr.io/memealyzernetqueueservice:1.0.10
+        image: memealyzerdev7acr.azurecr.io/memealyzernetqueueservice:1.0.11
         imagePullPolicy: Always
         env:
         - name: BASENAME
-          value: 'memealyzerbicep11'
+          value: 'memealyzerdev7'
         - name: REGION
           value: 'westus2'
         - name: FAILOVER_REGION
           value: 'eastus2'
         - name: TF_VAR_basename
-          value: 'memealyzerbicep11'
+          value: 'memealyzerdev7'
         - name: TF_VAR_location
           value: 'westus2'
         - name: TF_VAR_failover_location
           value: 'eastus2'
         - name: AZURE_FUNCTION_APP_NAME
-          value: 'memealyzerbicep11function'
+          value: 'memealyzerdev7function'
         - name: AZURE_CONTAINER_REGISTRY_SERVER
-          value: 'memealyzerbicep11acr.azurecr.io'
+          value: 'memealyzerdev7acr.azurecr.io'
         - name: K8S_CONTEXT
-          value: 'memealyzerbicep11aks'
+          value: 'memealyzerdev7aks'
         - name: CONTAINER_TAG
-          value: '1.0.10'
+          value: '1.0.11'
         - name: AZURE_CLIENT_SYNC_QUEUE_NAME
           value: 'sync'
         - name: API_ENDPOINT
@@ -220,7 +220,7 @@ spec:
 ...
 ---
 kind: Ingress
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1
 metadata:
   name: ingress
   annotations:
@@ -233,23 +233,38 @@ spec:
   - http:
       paths:
       - backend:
-          serviceName: memealyzernetwebapp
-          servicePort: 1080
+          service:
+            name: memealyzernetwebapp
+            port:
+              number: 1080
+        pathType: Prefix
         path: /()(.*)
       - backend:
-          serviceName: memealyzernetapi
-          servicePort: 2080
+          service:
+            name: memealyzernetapi
+            port:
+              number: 2080
+        pathType: Prefix
         path: /()(images.*)
       - backend:
-          serviceName: memealyzernetapi
-          servicePort: 2080
+          service:
+            name: memealyzernetapi
+            port:
+              number: 2080
+        pathType: Prefix
         path: /()(image.*)
       - backend:
-          serviceName: memealyzernetapi
-          servicePort: 2080
+          service:
+            name: memealyzernetapi
+            port:
+              number: 2080
+        pathType: Prefix
         path: /()(config.*)
       - backend:
-          serviceName: memealyzernetapi
-          servicePort: 2080
+          service:
+            name: memealyzernetapi
+            port:
+              number: 2080
+        pathType: Prefix
         path: /()(imagehub.*)
 ...
