--- a/.env
+++ b/.env
@@ -2,6 +2,9 @@ BASENAME=${BASENAME}
 REGION=westus2
 FAILOVER_REGION=eastus2
 
+# SET TO AUTO SELECT AZURE SUB
+SUBSCRIPTION_ID=
+
 # TERRAFORM VARS
 TF_VAR_basename=${BASENAME}
 TF_VAR_location=${REGION}
