--- a/src/net/WebApp/wwwroot/appsettings.json
+++ b/src/net/WebApp/wwwroot/appsettings.json
@@ -1,4 +1,4 @@
 {
-    "API_ENDPOINT": "",
-    "FUNCTIONS_ENDPOINT": "http://memealyzerdev10function.azurewebsites.net"
+    "API_ENDPOINT": "https://3778f1c2-941c-4481-b078-087af5b82b01-2080.apps.codespaces.githubusercontent.com",
+    "FUNCTIONS_ENDPOINT": "https://3778f1c2-941c-4481-b078-087af5b82b01-3080.apps.codespaces.githubusercontent.com"
 }
