--- a/src/net/Services/Functions/local.settings.json
+++ b/src/net/Services/Functions/local.settings.json
@@ -6,8 +6,8 @@
     "ClientSyncQueueConnectionString": ""
   },
   "Host": {
-    "CORS": "*",
-    "CORSCredentials": false,
-    "LocalHttpPort": 3080
+    "CORS": "https://3778f1c2-941c-4481-b078-087af5b82b01-1080.apps.codespaces.githubusercontent.com",
+    "CORSCredentials": true,
+    "LocalHttpPort": 80
   }
 }
