--- a/src/net/Lib/Lib.csproj
+++ b/src/net/Lib/Lib.csproj
@@ -13,7 +13,7 @@
     <PackageReference Include="Azure.Storage.Blobs" Version="12.8.0"/>
     <PackageReference Include="Azure.Storage.Queues" Version="12.6.0"/>
     <PackageReference Include="Azure.Cosmos" Version="4.0.0-preview3"/>
-    <PackageReference Include="Azure.Data.Tables" Version="3.0.0-beta.5"/>
+    <PackageReference Include="Azure.Data.Tables" Version="3.0.0-alpha.*"/>
     <PackageReference Include="Azure.Security.KeyVault.Secrets" Version="4.1.0"/>
     <PackageReference Include="Azure.AI.FormRecognizer" Version="3.0.0"/>
     <PackageReference Include="Azure.AI.TextAnalytics" Version="5.0.0"/>
@@ -23,7 +23,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Lib.Model\Lib.Model.csproj"/>
   </ItemGroup>
-  <!-- <PropertyGroup>
-    <RestoreSources>https://pkgs.dev.azure.com/azure-sdk/public/_packaging/azure-sdk-for-net/nuget/v3/index.json;https://api.nuget.org/v3/index.json</RestoreSources>
-  </PropertyGroup> -->
+  <PropertyGroup>
+    <RestoreSources>https://aka.ms/azsdk/net/feed/index.json;https://api.nuget.org/v3/index.json</RestoreSources>
+  </PropertyGroup>
 </Project>
