--- a/src/net/WebApp/WebApp.csproj
+++ b/src/net/WebApp/WebApp.csproj
@@ -19,7 +19,7 @@
   <ItemGroup>
     <None Update="nginx.conf" CopyToOutputDirectory="Always"/>
   </ItemGroup>
-  <!-- <PropertyGroup>
-    <RestoreSources>https://pkgs.dev.azure.com/azure-sdk/public/_packaging/azure-sdk-for-net/nuget/v3/index.json;https://api.nuget.org/v3/index.json</RestoreSources>
-  </PropertyGroup> -->
+  <PropertyGroup>
+    <RestoreSources>https://aka.ms/azsdk/net/feed/index.json;https://api.nuget.org/v3/index.json</RestoreSources>
+  </PropertyGroup> 
 </Project>
