--- a/src/net/Lib.Model/Lib.Model.csproj
+++ b/src/net/Lib.Model/Lib.Model.csproj
@@ -5,8 +5,6 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Azure.Data.Tables" Version="3.0.0-beta.5"/>
+    <PackageReference Include="Azure.Cosmos" Version="4.0.0-preview3"/>
   </ItemGroup>
-  <!-- <PropertyGroup>
-    <RestoreSources>https://pkgs.dev.azure.com/azure-sdk/public/_packaging/azure-sdk-for-net/nuget/v3/index.json;https://api.nuget.org/v3/index.json</RestoreSources>
-  </PropertyGroup> -->
 </Project>
