--- a/src/net/Lib/Lib.csproj
+++ b/src/net/Lib/Lib.csproj
@@ -5,8 +5,8 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Azure.Data.AppConfiguration" Version="1.0.2"/>
-    <PackageReference Include="Azure.Messaging.ServiceBus" Version="7.0.1"/>
-    <PackageReference Include="DotNetEnv" Version="2.0.0"/>
+    <PackageReference Include="Azure.Messaging.ServiceBus" Version="7.1.0"/>
+    <PackageReference Include="DotNetEnv" Version="2.1.0"/>
     <PackageReference Include="System.Linq.Async" Version="5.0.0"/>
     <PackageReference Include="System.Net.Http.Json" Version="5.0.0"/>
     <PackageReference Include="Azure.Identity" Version="1.3.0"/>
@@ -17,13 +17,10 @@
     <PackageReference Include="Azure.Security.KeyVault.Secrets" Version="4.1.0"/>
     <PackageReference Include="Azure.AI.FormRecognizer" Version="3.0.0"/>
     <PackageReference Include="Azure.AI.TextAnalytics" Version="5.0.0"/>
-    <!-- Needed due to this issue: https://github.com/dotnet/roslyn/issues/47304 -->
+    <!-- Needed due to this issue: https://github.com/dotnet/roslyn/issues/47304. Do not upgrade to 3.17 or it will break the app -->
     <PackageReference Include="Microsoft.Azure.Cosmos.Direct" Version="3.4.1.0"/>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Lib.Model\Lib.Model.csproj"/>
   </ItemGroup>
-  <!-- <PropertyGroup>
-    <RestoreSources>https://pkgs.dev.azure.com/azure-sdk/public/_packaging/azure-sdk-for-net/nuget/v3/index.json;https://api.nuget.org/v3/index.json</RestoreSources>
-  </PropertyGroup> -->
 </Project>
