Clean up images and change sub id env var

--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ REGION=westus2
 FAILOVER_REGION=eastus2
 
 # SET TO AUTO SELECT AZURE SUB
-SUBSCRIPTION_ID=
+AZURE_SUBSCRIPTION_ID=
 
 # TERRAFORM VARS
 TF_VAR_basename=${BASENAME}
