--- a/.env
+++ b/.env
@@ -21,10 +21,7 @@ CONTAINER_TAG=1.0.11
 
 # APP VARS
 
-# FOR FUNCTION APP BINDING
-AZURE_CLIENT_SYNC_QUEUE_NAME=sync
-
-# FOR LOCAL DEV WITH TYE BECAUSE TYE SUPPORTS LOCAL INGRESS
+# SET TO EMPTY FOR LOCAL DEV WITH TYE BECAUSE TYE SUPPORTS LOCAL INGRESS
 API_ENDPOINT=
 FUNCTIONS_ENDPOINT=
 # FOR LOCAL DEV WITH DOCKER
