--- a/src/net/Services/Functions/local.settings.json
+++ b/src/net/Services/Functions/local.settings.json
@@ -2,8 +2,7 @@
   "IsEncrypted": false,
   "Values": {
     "AzureWebJobsStorage": "UseDevelopmentStorage=true;",
-    "FUNCTIONS_WORKER_RUNTIME": "dotnet",
-    "ClientSyncQueueConnectionString": ""
+    "FUNCTIONS_WORKER_RUNTIME": "dotnet"
   },
   "Host": {
     "CORS": "*",
