--- a/pac/net/tye/tye.template.yaml
+++ b/pac/net/tye/tye.template.yaml
@@ -2,7 +2,7 @@ name: memealyzer
 registry: ${AZURE_CONTAINER_REGISTRY_SERVER}
 services:
   - name: azurite
-    image: mcr.microsoft.com/azure-storage/azurite:alpha
+    image: mcr.microsoft.com/azure-storage/azurite
     bindings:
       - name: blob
         port: 10000
