--- a/src/net/Lib/Lib.csproj
+++ b/src/net/Lib/Lib.csproj
@@ -10,12 +10,12 @@
     <PackageReference Include="System.Linq.Async" Version="5.0.0"/>
     <PackageReference Include="System.Net.Http.Json" Version="5.0.0"/>
     <PackageReference Include="Azure.Identity" Version="1.4.0"/>
-    <PackageReference Include="Azure.Storage.Blobs" Version="12.8.4"/>
-    <PackageReference Include="Azure.Storage.Queues" Version="12.6.2"/>
+    <PackageReference Include="Azure.Storage.Blobs" Version="12.9.0"/>
+    <PackageReference Include="Azure.Storage.Queues" Version="12.7.0"/>
     <PackageReference Include="Azure.Cosmos" Version="4.0.0-preview3"/>
-    <PackageReference Include="Azure.Data.Tables" Version="12.0.0-beta.8"/>
+    <PackageReference Include="Azure.Data.Tables" Version="12.0.1"/>
     <PackageReference Include="Azure.Security.KeyVault.Secrets" Version="4.1.1"/>
-    <PackageReference Include="Azure.AI.FormRecognizer" Version="3.1.0"/>
+    <PackageReference Include="Azure.AI.FormRecognizer" Version="3.1.1"/>
     <PackageReference Include="Azure.AI.TextAnalytics" Version="5.0.0"/>
     <!-- Needed due to this issue: https://github.com/dotnet/roslyn/issues/47304. Do not upgrade to 3.17 or it will break the app -->
     <PackageReference Include="Microsoft.Azure.Cosmos.Direct" Version="3.4.1.0"/>
