--- a/.env
+++ b/.env
@@ -28,7 +28,7 @@ FUNCTIONS_ENDPOINT=
 #FUNCTIONS_ENDPOINT=http://localhost:3080
 #API_ENDPOINT=http://localhost:2080
 
-MEME_ENDPOINT=https://meme-api.herokuapp.com/gimme/wholesomememes
+IMAGE_ENDPOINT=https://meme-api.herokuapp.com/gimme/wholesomememes
 # === AZURE_STORAGE_TYPE (Default=COSMOS_SQL)
 #AZURE_STORAGE_TYPE=STORAGE_TABLE
 #AZURE_STORAGE_TYPE=COSMOS_SQL
