--- a/pac/net/kubectl/local/templates/memealyzernetqueueservice-deployment.yaml
+++ b/pac/net/kubectl/local/templates/memealyzernetqueueservice-deployment.yaml
@@ -95,10 +95,10 @@ spec:
                 configMapKeyRef:
                   key: AZURE_TEXT_ANALYTICS_ENDPOINT
                   name: env
-            - name: MEME_ENDPOINT
+            - name: IMAGE_ENDPOINT
               valueFrom:
                 configMapKeyRef:
-                  key: MEME_ENDPOINT
+                  key: IMAGE_ENDPOINT
                   name: env
             - name: AZURE_STORAGE_TYPE
               valueFrom:
