--- a/src/net/Services/Functions/local.settings.json
+++ b/src/net/Services/Functions/local.settings.json
@@ -2,7 +2,8 @@
   "IsEncrypted": false,
   "Values": {
     "AzureWebJobsStorage": "UseDevelopmentStorage=true;",
-    "FUNCTIONS_WORKER_RUNTIME": "dotnet"
+    "FUNCTIONS_WORKER_RUNTIME": "dotnet",
+    "BASENAME": "meme617"
   },
   "Host": {
     "CORS": "*",
