--- a/src/net/Services/QueueService/QueueService.csproj
+++ b/src/net/Services/QueueService/QueueService.csproj
@@ -17,5 +17,6 @@
   <ItemGroup>
     <ProjectReference Include=".\..\..\Lib\Lib.csproj"/>
     <ProjectReference Include="..\..\Lib.Model\Lib.Model.csproj"/>
+    <ProjectReference Include="..\..\Config\Config.csproj"/>
   </ItemGroup>
 </Project>
