--- a/pac/net/tye/tye.yaml
+++ b/pac/net/tye/tye.yaml
@@ -1,5 +1,5 @@
 name: memealyzer
-registry: meme528acr.azurecr.io
+registry: meme617acr.azurecr.io
 services:
   - name: azurite
     image: mcr.microsoft.com/azure-storage/azurite
@@ -16,6 +16,22 @@ services:
         port: 10002
         containerPort: 10002
         protocol: http
+    volumes:
+      - source: /azurite/data
+        target: /data
+    tags:
+      - local
+  - name: ngrok
+    image: wernight/ngrok
+    args: ngrok start -config /home/config/ngrok/azurite.yml --all 
+    bindings:
+      - name: tunnels
+        port: 4040
+        containerPort: 4040
+        protocol: http
+    volumes:
+      - source: ../../../config/ngrok
+        target: /home/config/ngrok
     tags:
       - local
   - name: memealyzernetwebapp
@@ -36,13 +52,13 @@ services:
     tags:
       - local
       - cloud
-  - name: memealyzernetfunction
-    azureFunction: ../../../src/net/Services/Functions/
-    bindings:
-      - port: 3080
-        protocol: http
-    tags:
-      - local
+  # - name: memealyzernetfunction
+  #   azureFunction: ../../../src/net/Services/Functions/
+  #   bindings:
+  #     - port: 3080
+  #       protocol: http
+  #   tags:
+  #     - local
   - name: memealyzernetqueueservice
     project: ../../../src/net/Services/QueueService/QueueService.csproj
     env_file: 
@@ -68,9 +84,9 @@ ingress:
       - path: /imagehub
         service: memealyzernetapi
         preservePath: true
-      - path: /api/negotiate
-        service: memealyzernetfunction
-        preservePath: true
+      # - path: /api/negotiate
+      #   service: memealyzernetfunction
+      #   preservePath: true
     tags:
       - local
   - name: ingress
