--- a/src/net/Config/Config.csproj
+++ b/src/net/Config/Config.csproj
@@ -1,13 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Azure.Data.Tables" Version="12.0.1"/>
-    <PackageReference Include="Azure.Cosmos" Version="4.0.0-preview3"/>
+    <PackageReference Include="DotNetEnv" Version="2.1.1" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Config\Config.csproj"/>
+    <ProjectReference Include="..\Lib.Proxy\Lib.Proxy.csproj"/>
   </ItemGroup>
 </Project>
