--- a/src/net/Services/Functions/Functions.csproj
+++ b/src/net/Services/Functions/Functions.csproj
@@ -15,15 +15,16 @@
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Update="local.settings.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <CopyToPublishDirectory>Never</CopyToPublishDirectory>
     </None>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Lib\Lib.csproj"/>
     <ProjectReference Include="..\..\Lib.Model\Lib.Model.csproj"/>
+    <ProjectReference Include="..\..\Config\Config.csproj"/>
   </ItemGroup>
 </Project>
