--- a/src/net/Services/Functions/Functions.csproj
+++ b/src/net/Services/Functions/Functions.csproj
@@ -23,8 +23,8 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\Lib\Lib.csproj"/>
-    <ProjectReference Include="..\..\Lib.Model\Lib.Model.csproj"/>
-    <ProjectReference Include="..\..\Config\Config.csproj"/>
+    <ProjectReference Include="..\..\Libs\Lib\Lib.csproj"/>
+    <ProjectReference Include="..\..\Libs\Lib.Model\Lib.Model.csproj"/>
+    <ProjectReference Include="..\..\Libs\Lib.Configuration\Lib.Configuration.csproj"/>
   </ItemGroup>
 </Project>
