--- a/src/net/Api/Api.csproj
+++ b/src/net/Api/Api.csproj
@@ -4,9 +4,9 @@
     <Version>$(CONTAINER_TAG)</Version>
   </PropertyGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Lib\Lib.csproj"/>
-    <ProjectReference Include="..\Lib.Model\Lib.Model.csproj"/>
-    <ProjectReference Include="..\Config\Config.csproj"/>
+    <ProjectReference Include="..\Libs\Lib\Lib.csproj"/>
+    <ProjectReference Include="..\Libs\Lib.Model\Lib.Model.csproj"/>
+    <ProjectReference Include="..\Libs\Lib.Configuration\Lib.Configuration.csproj"/>
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="DotNetEnv" Version="2.1.1"/>
