Azurite and Ngrok (#64)
* Blob client

* Refactor ingestion

* Init full azurite

* Adding maxpollinginterval workaround

* Tunnel impl and cleanup

--- a/pac/net/tye/tye.template.yaml
+++ b/pac/net/tye/tye.template.yaml
@@ -16,8 +16,24 @@ services:
         port: 10002
         containerPort: 10002
         protocol: http
+    volumes:
+      - source: /azurite/data
+        target: /data
     tags:
       - local
+  - name: ngrok
+    image: wernight/ngrok
+    args: ngrok start -config /home/config/ngrok/azurite.yml --all ${NGROK_AUTHTOKEN}
+    bindings:
+      - name: tunnels
+        port: 4040
+        containerPort: 4040
+        protocol: http
+    volumes:
+      - source: ${ROOT}/config/ngrok
+        target: /home/config/ngrok
+    tags:
+      - ${TUNNEL_ENABLED}
   - name: memealyzernetwebapp
     project: ${ROOT}/src/net/WebApp/WebApp.csproj
     bindings:
