--- a/pac/net/tye/tye.yaml
+++ b/pac/net/tye/tye.yaml
@@ -1,5 +1,5 @@
 name: memealyzer
-registry: meme528acr.azurecr.io
+registry: meme617acr.azurecr.io
 services:
   - name: azurite
     image: mcr.microsoft.com/azure-storage/azurite
@@ -16,8 +16,24 @@ services:
         port: 10002
         containerPort: 10002
         protocol: http
+    volumes:
+      - source: /azurite/data
+        target: /data
     tags:
       - local
+  - name: ngrok
+    image: wernight/ngrok
+    args: ngrok start -config /home/config/ngrok/azurite.yml --all 
+    bindings:
+      - name: tunnels
+        port: 4040
+        containerPort: 4040
+        protocol: http
+    volumes:
+      - source: ../../../config/ngrok
+        target: /home/config/ngrok
+    tags:
+      - 
   - name: memealyzernetwebapp
     project: ../../../src/net/WebApp/WebApp.csproj
     bindings:
