--- a/src/net/Libs/Lib.Model/Lib.Model.csproj
+++ b/src/net/Libs/Lib.Model/Lib.Model.csproj
@@ -1,10 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netstandard2.1</TargetFramework>
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Azure.Data.Tables" Version="12.0.1"/>
     <PackageReference Include="Azure.Cosmos" Version="4.0.0-preview3"/>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Lib.Configuration\Lib.Configuration.csproj"/>
   </ItemGroup>
 </Project>
