Test new storage extension build

--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ REGION=eastus2
 FAILOVER_REGION=westus2
 
 # SET TO AUTO SELECT AZURE SUB
-AZURE_SUBSCRIPTION_ID=
+#AZURE_SUBSCRIPTION_ID=
 
 # TERRAFORM VARS
 TF_VAR_basename=${BASENAME}
@@ -22,8 +22,8 @@ CONTAINER_TAG=1.0.11
 # APP VARS
 
 # SET TO EMPTY FOR LOCAL DEV WITH TYE BECAUSE TYE SUPPORTS LOCAL INGRESS
-API_ENDPOINT=
-FUNCTIONS_ENDPOINT=
+#API_ENDPOINT=
+#FUNCTIONS_ENDPOINT=
 # FOR LOCAL DEV WITH DOCKER
 #FUNCTIONS_ENDPOINT=http://localhost:3080
 #API_ENDPOINT=http://localhost:2080
@@ -38,7 +38,7 @@ AZURE_STORAGE_TYPE=STORAGE_TABLE
 AZURE_MESSAGING_TYPE=STORAGE_QUEUE
 
 # This will determine how quickly the Storage Queue function polls for new messages.  It defaults to 10 seconds when using Azurite because we were seeing throttling with Ngrok.
-# AZURE_STORAGE_QUEUE_MAX_POLLING_INTERVAL="00:00:10"
+#AZURE_STORAGE_QUEUE_MAX_POLLING_INTERVAL="00:00:11"
 
 # COSMO EMULATOR
 #USE_COSMOS_EMULATOR=true
