--- a/src/net/Services/Functions/Functions.csproj
+++ b/src/net/Services/Functions/Functions.csproj
@@ -8,7 +8,7 @@
     <PackageReference Include="Microsoft.Azure.Functions.Extensions" Version="1.1.0"/>
     <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.ServiceBus" Version="5.0.0-beta.3"/>
     <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.SignalRService" Version="1.4.1"/>
-    <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.Storage" Version="5.0.0-beta.4"/>
+    <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.Storage" Version="5.0.0-alpha.20210622.1"/>
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="3.0.12"/>
     <PackageReference Include="DotNetEnv" Version="2.1.1"/>
     <PackageReference Include="Microsoft.Bcl.AsyncInterfaces" Version="5.0.0"/>
