Remove storage key

--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ REGION=eastus2
 FAILOVER_REGION=westus2
 
 # SET TO AUTO SELECT AZURE SUB
-AZURE_SUBSCRIPTION_ID=
+#AZURE_SUBSCRIPTION_ID=
 
 # TERRAFORM VARS
 TF_VAR_basename=${BASENAME}
@@ -22,8 +22,8 @@ CONTAINER_TAG=1.0.11
 # APP VARS
 
 # SET TO EMPTY FOR LOCAL DEV WITH TYE BECAUSE TYE SUPPORTS LOCAL INGRESS
-API_ENDPOINT=
-FUNCTIONS_ENDPOINT=
+#API_ENDPOINT=
+#FUNCTIONS_ENDPOINT=
 # FOR LOCAL DEV WITH DOCKER
 #FUNCTIONS_ENDPOINT=http://localhost:3080
 #API_ENDPOINT=http://localhost:2080
