--- a/src/net/Libs/Lib.Model/Lib.Model.csproj
+++ b/src/net/Libs/Lib.Model/Lib.Model.csproj
@@ -4,7 +4,7 @@
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Azure.Data.Tables" Version="12.0.1"/>
+    <PackageReference Include="Azure.Data.Tables" Version="12.1.0-alpha.20210623.1"/>
     <PackageReference Include="Azure.Cosmos" Version="4.0.0-preview3"/>
   </ItemGroup>
   <ItemGroup>
