--- a/src/net/Libs/Lib/Lib.csproj
+++ b/src/net/Libs/Lib/Lib.csproj
@@ -13,7 +13,7 @@
     <PackageReference Include="Azure.Storage.Blobs" Version="12.9.0"/>
     <PackageReference Include="Azure.Storage.Queues" Version="12.7.0"/>
     <PackageReference Include="Azure.Cosmos" Version="4.0.0-preview3"/>
-    <PackageReference Include="Azure.Data.Tables" Version="12.0.1"/>
+    <PackageReference Include="Azure.Data.Tables" Version="12.1.0-alpha.20210623.1"/>
     <PackageReference Include="Azure.Security.KeyVault.Secrets" Version="4.1.1"/>
     <PackageReference Include="Azure.AI.FormRecognizer" Version="3.1.1"/>
     <PackageReference Include="Azure.AI.TextAnalytics" Version="5.0.0"/>
