Round of func updates

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 BASENAME=${BASENAME}
-REGION=eastus2
-FAILOVER_REGION=westus2
+REGION=westus2
+FAILOVER_REGION=eastus2
 
 # SET TO AUTO SELECT AZURE SUB
 #AZURE_SUBSCRIPTION_ID=
@@ -16,7 +16,10 @@ AZURE_CONTAINER_REGISTRY_SERVER=${BASENAME}acr.azurecr.io
 
 # Use the following if you want to run with local k8s cluster
 #K8S_CONTEXT=docker-desktop
+
 K8S_CONTEXT=${BASENAME}aks
+
+# Update the following to force a new image creation
 CONTAINER_TAG=1.0.11
 
 # APP VARS
