Use new bicep listKeys()

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 BASENAME=${BASENAME}
-REGION=eastus2
-FAILOVER_REGION=westus2
+REGION=westus2
+FAILOVER_REGION=eastus2
 
 # SET TO AUTO SELECT AZURE SUB
 #AZURE_SUBSCRIPTION_ID=
