--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,7 +4,6 @@
 		"dockerfile": "Dockerfile"
 	},
 	"settings": {
-		"terminal.integrated.shell.linux": "/bin/bash",
 		"go.useGoProxyToCheckForToolUpdates": false,
 		"go.useLanguageServer": true,
 		"go.gopath": "/go",
@@ -38,7 +37,10 @@
 		"--cap-add=SYS_PTRACE",
 		"--security-opt",
 		"seccomp=unconfined",
-		"--privileged"
+		"--privileged",
+		"--net", "host", 
+        "-e", "DISPLAY=host.docker.internal:0",
+        "-v", "/tmp/.X11-unix:/tmp/.X11-unix"
 	],
 	// Add the IDs of extensions you want installed when the container is created.
 	"extensions": [
