--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,7 +4,6 @@
 		"dockerfile": "Dockerfile"
 	},
 	"settings": {
-		"terminal.integrated.shell.linux": "/bin/bash",
 		"go.useGoProxyToCheckForToolUpdates": false,
 		"go.useLanguageServer": true,
 		"go.gopath": "/go",
@@ -28,6 +27,7 @@
 		}
 	},
 	"remoteUser": "codespace",
+	"containerUser": "codespace",
 	"overrideCommand": false,
 	"workspaceMount": "source=${localWorkspaceFolder},target=/home/codespace/workspace,type=bind,consistency=cached",
 	"workspaceFolder": "/home/codespace/workspace",
@@ -38,16 +38,23 @@
 		"--cap-add=SYS_PTRACE",
 		"--security-opt",
 		"seccomp=unconfined",
-		"--privileged"
+		"--privileged",
+		"--net", "host", 
+        "-e", "DISPLAY=host.docker.internal:0",
+        "-v", "/tmp/.X11-unix:/tmp/.X11-unix"
 	],
 	// Add the IDs of extensions you want installed when the container is created.
 	"extensions": [
 		"GitHub.vscode-pull-request-github",
 		"ms-azuretools.vscode-azurefunctions",
-		"ms-azuretools.vscode-bicep"
+		"ms-azuretools.vscode-bicep",
+		"ms-playwright.playwright",
+		"ms-dotnettools.csharp",
+		"esbenp.prettier-vscode"
 	],
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
-	// "forwardPorts": [],
+	// 1080, 2080, 3080 - app ports, 8400 - az cli auth response port
+	"forwardPorts": [1080, 2080, 3080, 8400],
 	// "oryx build" will automatically install your dependencies and attempt to build your project
-	// "postCreateCommand": "sudo chmod a+x /root"
+	"postCreateCommand": "sudo chown -R codespace ~/workspace/src"
 }
