Update SignalR Function extension

--- a/src/net/NuGet.Config
+++ b/src/net/NuGet.Config
@@ -2,5 +2,6 @@
 <configuration>
   <packageSources>
     <add key="Azure SDK for .NET Dev Feed" value="https://pkgs.dev.azure.com/azure-sdk/public/_packaging/azure-sdk-for-net/nuget/v3/index.json" />
+    <add key="Azure SignalR Extension Feed" value="https://www.myget.org/F/azure-signalr-dev/api/v3/index.json" />
   </packageSources>
 </configuration>
