--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -56,5 +56,6 @@
 	// 1080, 2080, 3080 - app ports, 8400 - az cli auth response port
 	"forwardPorts": [1080, 2080, 3080, 8400],
 	// "oryx build" will automatically install your dependencies and attempt to build your project
-	"postCreateCommand": "sudo chown -R codespace ~/workspace/src"
+	"postCreateCommand": "sudo chown -R codespace ~/workspace/src",
+	"postStartCommand": "sudo chown -R codespace ~/workspace/src"
 }
